extension/blossom-extension/src/components/CardTemplateComponent.css
#cardBody {
    width: 200px;
    height: 300px;
    background-image: url("../../static/CardTemplate.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    color: black;
    font-family: sans-serif;
    font-size: x-small;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#cardHeader {
    display: flex;
    justify-content: space-between;
    padding: 2px 10px;
    color: white;
    position: absolute;
    top: 5px;
    width: 90%;
    z-index: 2;
}

.cardInput {
    background-color: rgba(0, 0, 0, 0.5);
    border: none;
    color: white;
    padding: 2px 5px;
    border-radius: 3px;
    font-size: small;
    text-align: center;
    width: 45%;
}

#cardImageContainer {
    height: 60%;
    width: 100%;
    position: static;
    z-index: 1;
    overflow: hidden;
}

#cardImage {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#name {
    position: absolute;
    font-size: large;
    top: 60%;
    width: 95%;
    text-align: center;
    font-weight: bold;
    color: white;
    z-index: 2;
    padding: 2px 5px;
    background-color: rgba(0, 0, 0, 0.5);
    border: none;
}

#cardFooter {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 5px;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    position: absolute;
    bottom: 10px;
    width: 90%;
    height: 25%;
    z-index: 2;
    left: 10px;
    font-size: small;
}

#abilityName {
    margin-bottom: 3px;
}

#abilityDescription {
    font-size: xx-small;
    text-align: center;
    margin-bottom: 3px;
}

#tp {
    margin-top: 5px;
}

.submitButton {
    margin-top: 5px;
    background-color: rgba(0, 0, 0, 0.5);
    border: none;
    color: white;
    padding: 5px;
    border-radius: 3px;
    cursor: pointer;
}

.submitButton:hover {
    background-color: rgba(0, 0, 0, 0.7);
}

